File Repo: serve index.html by default (#971).
When the path of a file repo request (`/filerepo/...`) points to a directory, and the directory contains an `index.html` file, it is served.

See #971.